# sift-features

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 15rxbx180jc4sdp9r0h6vrydann16kxq-source  62lkw1rrbzqprmxhdxja01jihm48albz-source  74lr5hila62762ypipm01xbc7ffjbfg9-source  q26sc3ikwn4hakchlhj06zzp3wxwyaqq-source  qpg5mwsind2hy35b9vpk6mx4jimnypw0-source
benches/: descriptor.rs  sift.rs
examples/: match-resized.rs  opencv-compare.rs  opencv-cross-match.rs  opencv-sift.rs  run-sift.rs  sift-match.rs  snapshot.rs
images/: credit.txt
snapshots/: bird.json  bird_small.json  tree.json  tree_small.json
src/: atan2.rs  descriptor.rs  exp.rs  lib.rs  local_extrema.rs  opencv_processing.rs
src/snapshots/: sift__sift_end2end-2.snap  sift__sift_end2end-3.snap  sift__sift_end2end-4.snap  sift__sift_end2end.snap  sift_features__sift_end2end-2.snap  sift_features__sift_end2end-3.snap  sift_features__sift_end2end-4.snap  sift_features__sift_end2end.snap
