[package]
name = "sift-features"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tnibler/sift-features"
description = "Implementation of SIFT image features, compatible with OpenCV"
license = "MIT"
readme = "README.md"
keywords = ["sift", "cv", "image", "descriptor", "feature"]
categories = ["computer-vision", "science"]

[dependencies]
imageproc = "0.25.0"
itertools = "0.13.0"
image = "0.25.2"
ndarray = "0.16.1"
nshare = { version = "0.10.0", features = ["image", "ndarray"] }
opencv = { version = "0.93.0", optional = true }
aligned-vec = "0.6.1"
static_assertions = "1.1.0"
serde = { version = "1.0.210", features = ["derive"], optional = true }

[dev-dependencies]
opencv = { version = "0.93.0" }
serde_json = "1.0.128"
divan = "0.1.14"
average = "0.15.1"

[features]
default = []
serde = ["dep:serde", "ndarray/serde"]

[[bench]]
name = "sift"
harness = false

[[bench]]
name = "descriptor"
harness = false

[[example]]
name = "snapshot"
required-features = ["opencv", "serde"]

[[example]]
name = "match-resized"
required-features = ["opencv"]

[[example]]
name = "opencv-compare"
required-features = ["opencv"]

[[example]]
name = "opencv-sift"
required-features = ["opencv"]

[[example]]
name = "opencv-cross-match"
required-features = ["opencv"]

[profile.release]
debug = true
